src/app/globals.css
@import 'tailwindcss';

@config '../../tailwind.config.ts';

:root {
    --primary: rgb(2, 27, 18);
    --secondary: rgb(161, 235, 185);
    --focus: rgb(154, 152, 152);
}

@theme inline {
    --color-primary: var(--primary);
    --color-secondary: var(--secondary);
    --color-focus: var(--focus);
    --color-faded-5: rgba(183, 255, 207, 0.05);
    --color-faded-30: rgba(183, 255, 207, 0.3);
    --color-faded-70: rgba(183, 255, 207, 0.7);
    --color-faded-90: rgba(183, 255, 207, 0.9);
    --color-faded: rgba(183, 255, 207, 0.1);
    --font-primary: var(--font-pp-neue-corp);

    --text-display-large: 147px;
    --text-display-medium: 103px;
    --text-display-small: 62px;
    --text-headline-large: 51px;
    --text-headline-medium: 40px;
    --text-headline-small: 32px;
    --text-title-large: 22px;
    --text-title-medium: 20px;
    --text-title-small: 18px;
    --text-body-large: 18px;
    --text-body-medium: 16px;
    --text-body-small: 14px;
    --text-label-large: 14px;
    --text-label-medium: 12px;
    --text-label-small: 10px;

    --header-height-mobile: 4rem;
}

@layer base {
    *,
    *::before,
    *::after {
        box-sizing: border-box;
    }

    * {
        margin: 0;
        padding: 0;
    }

    html,
    body {
        font-weight: 300;
        -webkit-font-smoothing: antialiased;
        transition: background-color 0.2s linear;
    }

    button {
        cursor: pointer;
    }

    h1,
    h2,
    h3,
    h4,
    h5,
    h6,
    span,
    button,
    a {
        overflow-wrap: break-word;
    }

    textarea {
        resize: none;
    }

    @supports (scrollbar-color: auto) {
        * {
            scrollbar-color: rgba(var(--secondary), 0.2)
                rgba(var(--secondary), 0.2);
            scrollbar-width: thin;
            box-shadow: none;
        }
    }

    *::-webkit-scrollbar {
        width: 2px;
        height: 2px;
    }
    #page-wrapper::-webkit-scrollbar-track {
        background-color: rgba(var(--secondary), 0.2);
        -webkit-box-shadow: none;
    }
    #page-wrapper::-webkit-scrollbar-thumb {
        background-color: rgba(var(--secondary), 0.5);
        width: 1rem;
        height: 1rem;
        -webkit-box-shadow: none;
    }

    #projects-menu::-webkit-scrollbar {
        width: 5px;
        height: 5px;
    }

    #projects-menu::-webkit-scrollbar-track {
        background-color: rgba(var(--secondary), 0.2);
        -webkit-box-shadow: none;
    }
    #projects-menu::-webkit-scrollbar-thumb {
        background-color: rgba(var(--secondary), 0.5);
        width: 1rem;
        height: 1rem;
        -webkit-box-shadow: none;
    }

    p {
        @apply text-body-medium;
    }

    /* PLAYER SLIDER THUMB */
    input[type='range']::-webkit-slider-thumb {
        -webkit-appearance: none;
        appearance: none;
        width: 6px; /* width of the thumb */
        height: 20px; /* height of the thumb */
        background: rgba(var(--secondary), 1); /* thumb color */
        cursor: pointer; /* cursor type on hover */
    }

    input[type='range']::-moz-range-thumb {
        width: 20px;
        height: 20px;
        background: rgba(var(--secondary), 1);
        cursor: pointer;
    }

    /* RICH TEXT STYLES */
    .custom-rich-text p {
        @apply mb-2 text-body-medium lg:text-body-large;
    }

    .custom-rich-text p:last-of-type {
        @apply mb-0;
    }

    .custom-rich-text h2,
    .custom-rich-text h3 {
        @apply my-6 text-title-small leading-[1.1] font-normal md:text-title-medium lg:mt-12 lg:text-title-large;
    }

    .custom-rich-text a {
        @apply font-normal;
    }

    .custom-rich-text ul {
        @apply mb-6 ml-6 list-disc text-body-small md:text-body-medium lg:mb-12 lg:text-body-large;
    }
}

@keyframes bg-animation {
    0% {
        transform: translate(0, 0);
    }
    10% {
        transform: translate(-5%, -5%);
    }
    20% {
        transform: translate(-10%, 5%);
    }
    30% {
        transform: translate(5%, -10%);
    }
    40% {
        transform: translate(-5%, 15%);
    }
    50% {
        transform: translate(-10%, 5%);
    }
    60% {
        transform: translate(15%, 0);
    }
    70% {
        transform: translate(0, 10%);
    }
    80% {
        transform: translate(-15%, 0);
    }
    90% {
        transform: translate(10%, 5%);
    }
    100% {
        transform: translate(5%, 0);
    }
}

@layer components {
    .logo {
        @apply -ml-1 text-[clamp(5rem,12vw,13rem)] leading-[clamp(3.8rem,9vw,10rem)] font-medium text-nowrap lg:-ml-3;
    }

    .underlined-link {
        @apply relative inline-block w-fit overflow-x-clip text-secondary uppercase no-underline;
    }

    .underlined-link::after {
        @apply absolute bottom-[2px] left-0 z-50 h-px w-full -translate-x-[102%] bg-secondary transition-transform duration-300 content-[''];
    }

    .underlined-link:hover::after,
    .active.underlined-link::after {
        @apply translate-x-0;
    }
}

